<resources>
    <string name="app_name">WishListApp</string>
    <string name="add_gift">Добавить подарок</string>
    <string name="create_gift_button">Создать подарок</string>
    <string name="create_gift_name_hint">Название</string>
    <string name="create_gift_link_hint">Ссылка</string>
    <string name="my_wishlist">Мой вишлист</string>
    <string name="friends_wish_lists">Вишлисты друзей</string>
    <string name="my_gifts_title">Мои подарки</string>
    <string name="create_gift_image_link_hint">Ссылка на картинку</string>
    <string name="create_gift_price_hint">Цена</string>
    <string name="create_gift_description_hint">Описание</string>
    <string name="button_delete">Удалить</string>
    <string name="button_to_shop">В магазин</string>
    <string name="gift_reservation">Забронировать подарок</string>
</resources>